@@ -2,49 +2,15 @@
 # This Dockerfile requires BuildKit to be enabled, by setting the environment variable
 # DOCKER_BUILDKIT=1
 # see https://docs.docker.com/build/buildkit/#getting-started
-ARG JVM="eclipse-temurin"
-ARG JAVA_VERSION="17"
-# We duplicate the JVM and JAVA_VERSION vars here as renovate will otherwise fail to properly parse
-ARG BASE_IMAGE="eclipse-temurin:17-jre-focal"
-ARG BASE_DIGEST_AMD64="sha256:e3a9caf145a274335a402ea48f37a88450a847bec6effbd98f61c0c552ee9b53"
-ARG BASE_DIGEST_ARM64="sha256:737781ca3eb1bc00e7b322a53f45f406a28fd57b030ee58760ef0c3495fb9c6e"
+ARG BASE_IMAGE="ubuntu:jammy-20230624"
+ARG BASE_DIGEST_AMD64="sha256:b060fffe8e1561c9c3e6dea6db487b900100fc26830b9ea2ec966c151ab4c020"
+ARG BASE_DIGEST_ARM64="sha256:fb4a67ec973b2995214edd101e37a83787b175a16750b372789c8f6314dc20ca"
+ARG JDK_IMAGE="eclipse-temurin:17-jdk-jammy"
+ARG JDK_DIGEST_AMD64="sha256:a16cce6e84fd66cdbf753dd7bc65f6ba2e6d74b907052146709b3dd513dc54b6"
+ARG JDK_DIGEST_ARM64="sha256:f84e436a00db070dd6df8206b3800b8e7799e13a9f75a96581e425707672d193"
 
 # set to "build" to build zeebe from scratch instead of using a distball
 ARG DIST="distball"
-
-### Init image containing tini and the startup script ###
-FROM ubuntu:jammy as init
-WORKDIR /zeebe
-RUN rm /etc/apt/apt.conf.d/docker-clean
-RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
-    --mount=type=cache,target=/var/lib/apt,sharing=locked \
-    apt-get -qq update && \
-    apt-get install -y --no-install-recommends tini=0.19.0-1 && \
-    cp /usr/bin/tini .
-COPY --link --chown=1000:0 docker/utils/startup.sh .
-
-### Build zeebe from scratch ###
-FROM maven:3-${JVM}-${JAVA_VERSION} as build
-WORKDIR /zeebe
-ENV MAVEN_OPTS -XX:MaxRAMPercentage=80
-COPY --link . ./
-RUN --mount=type=cache,target=/root/.m2,rw mvn -B -am -pl dist package -T1C -D skipChecks -D skipTests
-RUN mv dist/target/camunda-zeebe .
-
-### Extract zeebe from distball ###
-FROM ubuntu:jammy as distball
-WORKDIR /zeebe
-ARG DISTBALL="dist/target/camunda-zeebe-*.tar.gz"
-COPY --link ${DISTBALL} zeebe.tar.gz
-
-# Remove zbctl from the distribution to reduce CVE related maintenance effort w.r.t to containers
-RUN mkdir camunda-zeebe && \
-    tar xfvz zeebe.tar.gz --strip 1 -C camunda-zeebe && \
-    find . -type f -name 'zbctl*' -delete
-
-### Image containing the zeebe distribution ###
-# hadolint ignore=DL3006
-FROM ${DIST} as dist
 
 ### AMD64 base image ###
 # BASE_DIGEST_AMD64 is defined at the top of the Dockerfile
@@ -60,11 +26,107 @@ FROM ${BASE_IMAGE}@${BASE_DIGEST_ARM64} as base-arm64
 ARG BASE_DIGEST_ARM64
 ARG BASE_DIGEST="${BASE_DIGEST_ARM64}"
 
+### Base image ##
+# All package installation, updates, etc., anything with APT should be done here in a single step
+# hadolint ignore=DL3006
+FROM base-${TARGETARCH} as base
+WORKDIR /
+
+# Upgrade all outdated packages and install missing ones (e.g. locales, tini)
+# This breaks reproducibility of builds, but is acceptable to gain access to security patches faster
+# than the base image releases
+# FYI, installing packages via APT also updates the dpkg files, which are few MBs, but removing or
+# caching them could break stuff (like not knowing the package is present) or container scanners
+# hadolint ignore=DL3008
+RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
+    --mount=type=cache,target=/var/lib/apt,sharing=locked \
+    --mount=type=cache,target=/var/log/apt,sharing=locked \
+    apt-get -qq update && \
+    apt-get install -yqq --no-install-recommends tini ca-certificates && \
+    apt-get upgrade -yqq --no-install-recommends
+
+
+### AMD64 JDK image ###
+# JDK_DIGEST_AMD64 is defined at the top of the Dockerfile
+# hadolint ignore=DL3006
+FROM ${JDK_IMAGE}@${JDK_DIGEST_AMD64} as jdk-amd64
+
+### ARM64 JDK image ##
+# JDK_DIGEST_ARM64 is defined at the top of the Dockerfile
+# hadolint ignore=DL3006
+FROM ${JDK_IMAGE}@${JDK_DIGEST_ARM64} as jdk-arm64
+
+### Build custom JRE using the base JDK image
+# hadolint ignore=DL3006
+FROM jdk-${TARGETARCH} as jre-build
+
+# Build a custom JRE which will strip down and compress modules to end up with a smaller Java \
+# distribution than the official JRE. This will also include useful debugging tools like
+# jcmd, jmod, jps, etc., which take little to no space. Anecdotally, compressing modules add around
+# 10ms to the start up time, which is negligible considering our application takes ~10s to start up.
+# See https://adoptium.net/blog/2021/10/jlink-to-produce-own-runtime/
+# hadolint ignore=DL3018
+RUN jlink \
+     --add-modules ALL-MODULE-PATH \
+     --strip-debug \
+     --no-man-pages \
+     --no-header-files \
+     --compress=2 \
+     --output /jre && \
+   rm -rf /jre/lib/src.zip
+
+### Java base image
+FROM base AS java
+WORKDIR /
+
+# Inherit from previous build stage
+ARG JAVA_HOME=/opt/java/openjdk
+
+# Default to UTF-8 file encoding
+ENV LANG='C.UTF-8' LC_ALL='C.UTF-8'
+
+# Setup JAVA_HOME and binaries in the path
+ENV JAVA_HOME ${JAVA_HOME}
+ENV PATH $JAVA_HOME/bin:$PATH
+
+# Copy JRE from previous build stage
+COPY --from=jre-build /jre ${JAVA_HOME}
+
+# https://github.com/docker-library/openjdk/issues/212#issuecomment-420979840
+# https://openjdk.java.net/jeps/341
+# TL;DR generate some class data sharing for faster load time
+RUN java -Xshare:dump;
+
+### Build zeebe from scratch ###
+FROM java as build
+WORKDIR /zeebe
+ENV MAVEN_OPTS -XX:MaxRAMPercentage=80
+COPY --link . ./
+RUN --mount=type=cache,target=/root/.m2,rw \
+    ./mvnw -B -am -pl dist package -T1C -D skipChecks -D skipTests && \
+    mv dist/target/camunda-zeebe .
+
+### Extract zeebe from distball ###
+# hadolint ignore=DL3006
+FROM base as distball
+WORKDIR /zeebe
+ARG DISTBALL="dist/target/camunda-zeebe-*.tar.gz"
+COPY --link ${DISTBALL} zeebe.tar.gz
+
+# Remove zbctl from the distribution to reduce CVE related maintenance effort w.r.t to containers
+RUN mkdir camunda-zeebe && \
+    tar xfvz zeebe.tar.gz --strip 1 -C camunda-zeebe && \
+    find . -type f -name 'zbctl*' -delete
+
+### Image containing the zeebe distribution ###
+# hadolint ignore=DL3006
+FROM ${DIST} as dist
+
 ### Application Image ###
 # TARGETARCH is provided by buildkit
 # https://docs.docker.com/engine/reference/builder/#automatic-platform-args-in-the-global-scope
 # hadolint ignore=DL3006
-FROM base-${TARGETARCH} as app
+FROM java as app
 # leave unset to use the default value at the top of the file
 ARG BASE_IMAGE
 ARG BASE_DIGEST
@@ -122,8 +184,7 @@ RUN groupadd -g 1000 zeebe && \
     chown -R 1000:0 ${ZB_HOME} && \
     chmod -R 0775 ${ZB_HOME}
 
-COPY --from=init --chown=1000:0 /zeebe/tini ${ZB_HOME}/bin/
-COPY --from=init --chown=1000:0 /zeebe/startup.sh /usr/local/bin/startup.sh
+COPY --link --chown=1000:0 docker/utils/startup.sh /usr/local/bin/startup.sh
 COPY --from=dist --chown=1000:0 /zeebe/camunda-zeebe ${ZB_HOME}
 
 USER zeebe:zeebe
